<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mbopartners.mbomobile.ui.activity.forgotpassword.ForgotPasswordActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mbo_LabelPre_ForgotPassword"
        android:id="@+id/mbo_textView_ForgotPassword_Text"
        android:layout_marginTop="75dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/mbo_ForgotPassword_editText_Email"
        android:layout_alignEnd="@+id/mbo_ForgotPassword_editText_Email" />

    <EditText
        android:hint="@string/mbo_ForgotPassword_hint_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/mbo_ForgotPassword_editText_Email"
        android:layout_below="@+id/mbo_textView_ForgotPassword_Text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mbo_ForgotPassword_SubmitEmail"
        android:id="@+id/mbo_button_ForgotPassword_SubmitEmail"
        android:layout_below="@+id/mbo_ForgotPassword_editText_Email"
        android:layout_marginTop="46dp"
        android:layout_alignStart="@+id/mbo_ForgotPassword_editText_Email"
        android:layout_alignEnd="@+id/mbo_ForgotPassword_editText_Email" />
</RelativeLayout>
