<RelativeLayout android:id="@+id/mbo_login_parent"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/mbo_color_white"
                tools:context="com.mbopartners.mbomobile.ui.activity.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="70dip"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:src="@drawable/login_logo"
        android:scaleType="centerCrop"/>

    <EditText
        android:id="@+id/mbo_editText_login_username"
        style="@style/Mbo_SimpleEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/mbo_textView_login_ErrorMessage"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:ellipsize="end"
        android:hint="@string/mbo_Login_hint_Login"
        android:lines="1"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/mbo_editText_login_password"
        style="@style/Mbo_SimpleEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/mbo_editText_login_username"
        android:layout_alignRight="@+id/mbo_editText_login_username"
        android:layout_alignStart="@+id/mbo_editText_login_username"
        android:layout_below="@+id/mbo_editText_login_username"
        android:ellipsize="end"
        android:ems="10"
        android:hint="@string/mbo_Login_hint_Password"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/mbo_textView_login_ErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:ellipsize="end"
        android:lines="3"
        android:maxLines="3"
        android:minLines="3"
        android:text="@string/mbo_login_ErrorMessage"
        android:textColor="@color/mbo_error_message_text__color"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/mbo_button_login_signIn"
        style="@style/Mbo_SimpleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/mbo_Login_SignIn"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/mbo_button_login_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mbo_editText_login_password"
        android:layout_below="@+id/mbo_editText_login_password"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/mbo_Login_ForgotPassword"
        android:textColor="@color/mbo_simple_text__color"
        android:textSize="16dp"
        />

</RelativeLayout>
