<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:theme="@style/mbo_AppBar_grey"
        app:popupTheme="@style/mbo_AppBar_PopupMenu_grey"
        app:titleTextAppearance="@style/Toolbar.TitleText"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mbo_style_layout_shape"
        tools:context="com.mbopartners.mbomobile.ui.activity.settings.SettingsActivity">

        <Switch
            android:id="@+id/mbo_switch_settings_pin_on_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:textSize="18dp"
            android:textColor="@color/company_name"
            android:text="@string/mbo_Settings_Unlock_with_PIN"
            android:checked="false" />

        <TextView
            android:id="@+id/mbo_textView_settings_chagge_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:textSize="18dp"
            android:textColor="@color/company_name"
            android:text="@string/mbo_Settings_Change_password"
            android:layout_below="@+id/devider_line_01"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/mbo_textView_settings_app_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:textSize="18dp"
            android:textColor="@color/company_name"
            android:text="@string/mbo_Settings_application_support"
            android:layout_below="@+id/devider_line_02"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/mbo_textView_settings_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:textSize="18dp"
            android:textColor="@color/company_name"
            android:text="@string/menu_dashboard_action_about"
            android:layout_below="@+id/mbo_textView_settings_app_support"
            android:layout_alignParentEnd="true" />

        <View
            android:id="@+id/devider_line_01"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginStart="57dp"
            android:background="@color/mbo_color_grey_delimiter_30"
            android:layout_below="@+id/mbo_switch_settings_pin_on_off"
            android:layout_alignParentStart="true" />

        <View
            android:layout_marginStart="57dp"
            android:id="@+id/devider_line_02"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/mbo_color_grey_delimiter_30"
            android:layout_below="@+id/mbo_textView_settings_chagge_password"
            android:layout_alignParentStart="true" />

        <View
            android:layout_marginStart="57dp"
            android:id="@+id/devider_line_03"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/mbo_color_grey_delimiter_30"
            android:layout_below="@+id/mbo_textView_settings_app_support"
            android:layout_alignParentEnd="true" />

        <View
            android:layout_marginStart="57dp"
            android:id="@+id/devider_line_04"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/mbo_color_grey_delimiter_30"
            android:layout_below="@+id/mbo_textView_settings_about"
            android:layout_alignParentEnd="true" />

        <View
            android:layout_below="@+id/period_dates_TextView"
            android:background="@drawable/bar_shadow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/mbo_shadow_height"/>

    </RelativeLayout>

</LinearLayout>



