<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/mbo_AppBar_grey"
        app:popupTheme="@style/mbo_AppBar_PopupMenu_grey"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        app:titleTextAppearance="@style/Toolbar.TitleText"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="241dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/mbo_style_layout_shape"
        tools:context="com.mbopartners.mbomobile.ui.activity.about.AboutActivity"
        android:layout_above="@+id/linearLayout2"
        android:layout_below="@+id/toolbar">

        <TextView
            android:id="@+id/mbo_textView_About_AppVersion"
            tools:text="MBO Partners Mobile V 1.0"
            android:textSize="18dp"
            android:textColor="@color/company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="29dp"
            android:layout_below="@+id/mbo_imageView_settings_Logo"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/mbo_imageView_settings_Logo"
            android:background="@drawable/splash_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2"
        android:padding="16dp"
        android:background="@drawable/mbo_style_layout_shape"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mbo_Copyright"
            android:textSize="12dp"
            android:textColor="@color/company_name"
            android:id="@+id/mbo_copyright_TextView" />

        <View
            android:id="@+id/devider_line_01"
            android:layout_width="1.5dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@color/mbo_theme_blue_primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mbo_Privacy_Policy"
            android:textSize="12dp"
            android:textColor="@color/company_name"
            android:id="@+id/mbo_privacy_policy_TextView" />

        <View
            android:id="@+id/devider_line_02"
            android:layout_width="1.5dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@color/mbo_theme_blue_primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mbo_Terms_and_Conditions"
            android:textSize="12dp"
            android:textColor="@color/company_name"
            android:id="@+id/mbo_terms_and_conditions_TextView" />
    </LinearLayout>

    <View
        android:layout_below="@+id/toolbar"
        android:background="@drawable/bar_shadow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mbo_shadow_height"/>

</RelativeLayout>



